--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno:wght@200&wght@900&display=swap");
 
 body {
   font-family: 'MuseoModerno', cursive;
