--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -1,12 +1,17 @@
 .SearchResults {
     background-color: rgba(145, 145, 145, 0.3);
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 60vw;
 }
 
 @media only screen and (min-width: 768px) {
     .SearchResults {
-        display: flex;
         flex-flow: row wrap;
         align-items: flex-end;
         justify-content: space-evenly;
+        padding-top: 0;
+        width: auto;
     }
 }
