--- a/src/components/CollectionCard/CollectionCard.css
+++ b/src/components/CollectionCard/CollectionCard.css
@@ -1,12 +1,18 @@
 .CollectionCard {
-    width: 180px;
+    width: 170px;
     border: 1px dashed rgb(51, 90, 140);
     margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .CollectionCard-Title {
     text-align: center;
     font-size: 20px;
+    padding: 0 5px;
+    background-color: rgba(145, 145, 145, 0.5);
 }
 
 .no-photos {
