--- a/src/components/CollectionCard/CollectionCard.css
+++ b/src/components/CollectionCard/CollectionCard.css
@@ -1,5 +1,6 @@
 .CollectionCard {
-    width: 170px;
+    width: 180px;
+    height: 130px;
     border: 1px dashed rgb(51, 90, 140);
     margin-bottom: 5px;
     display: flex;
@@ -12,7 +13,8 @@
     text-align: center;
     font-size: 20px;
     padding: 0 5px;
-    background-color: rgba(145, 145, 145, 0.5);
+    margin: 0 0 5px 0;
+    background-color: rgba(145, 145, 145, 0.75);
 }
 
 .no-photos {
