--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,7 +11,7 @@
     font-size: 15px;
 }
 
-h1 {
+.nav-wrapper > h1 {
     font-size: 30px;
     align-self: flex-end;
 }
@@ -34,7 +34,7 @@ li {
 @media only screen and (min-width: 768px) {
     .nav-wrapper { font-size: 20px;}
 
-    h1 { 
+    .nav-wrapper > h1 { 
         font-size: 40px;
         margin-bottom: 15px;
     }
