--- a/src/components/PhotoCard/PhotoCard.css
+++ b/src/components/PhotoCard/PhotoCard.css
@@ -18,6 +18,18 @@
     font-family: 'Nunito', sans-serif;
 }
 
+.delete {
+    background-color: rgb(133, 13, 13);
+    width: 218px;
+    padding: 0 5px;
+    text-align: center;
+    border: 2px solid rgb(74, 4, 4);
+}
+
+.delete:hover {
+    cursor: pointer;
+}
+
 @media only screen and (min-width: 768px) {
     .PhotoCard { 
         display: flex;
