--- a/src/pages/CollectionDetailsPage/CollectionDetailsPage.css
+++ b/src/pages/CollectionDetailsPage/CollectionDetailsPage.css
@@ -2,6 +2,28 @@
     color: white;
 }
 
+.title-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .CollectionTitle {
     text-align: center;
+}
+
+.delete {
+    background-color: rgb(133, 13, 13);
+    width: 218px;
+    padding: 0 5px;
+    text-align: center;
+    border: 2px solid rgb(74, 4, 4);
+}
+
+.delete:hover {
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+    .CollectionTitle { font-size: 40px; }
 }
