--- a/src/pages/CollectionDetailsPage/CollectionDetailsPage.css
+++ b/src/pages/CollectionDetailsPage/CollectionDetailsPage.css
@@ -24,6 +24,13 @@
     cursor: pointer;
 }
 
+.details-return {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 20px;
+}
+
 @media only screen and (min-width: 768px) {
     .CollectionTitle { font-size: 40px; }
 }
