paginate search results

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,7 @@
 footer {
+    background-image: url("../../images/Nasty\ Nebula\ Hubble.jpg");
+    background-size: cover;
+    background-position: top;
     border-top: 1px gray dashed;
     display: flex;
     color: white;
