--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -1,10 +1,10 @@
 .Result {
-    margin: 20px;
+    margin: 10px;
 }
 
 .Result-thumb {
-    width: 200px;
-    max-height: 220px;
+    max-width: 200px;
+    max-height: 180px;
     align-self: baseline;
     transition: transform .5s ease;
 }
