--- a/src/pages/SearchPage/SearchPage.css
+++ b/src/pages/SearchPage/SearchPage.css
@@ -5,7 +5,7 @@
     color: white;
     text-align: center;
     font-size: 20px;
-    padding: 5vh;
+    padding: 0 4vw;
 }
 
 .SearchPage > form {
@@ -38,6 +38,39 @@
     transition-timing-function: ease-out;
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
 } */
+
+.pagination {
+    margin: 15px auto;
+    display: flex;
+    list-style: none;
+    outline: none;
+    padding: 0;
+}
+
+.pagination > .active {
+    margin-right: 0;
+}
+
+.pagination > .active > a {
+    background-color: rgb(57, 117, 174) ;
+    border-color: rgb(57, 117, 174);
+    color: white;
+}
+
+.pagination > li > a {
+    border: 1px solid rgb(57, 117, 174);
+    padding: 5px 10px;
+    outline: none;
+    cursor: pointer;
+}
+
+.pagination > li > a, .pagination > li > span {
+    color: white;
+}
+
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span {
+    border-radius: unset
+}
 
 @media only screen and (min-width: 768px) {
     .SearchPage > form { width: 25vw; }
